[gd_scene load_steps=8 format=3 uid="uid://bt86d405umefi"]

[ext_resource type="Script" path="res://Scripts/MainScenes/player_menu.gd" id="1_y8pii"]
[ext_resource type="PackedScene" uid="uid://chr5bm0rlck45" path="res://Scenes/Prefabs/player.tscn" id="2_7obty"]
[ext_resource type="LabelSettings" uid="uid://dm644nfi0nxiy" path="res://Assets/_Settings/LabelSettings/Main.tres" id="2_hv66v"]
[ext_resource type="PackedScene" uid="uid://d37adrmqjkfm6" path="res://Scenes/MainScenes/player_selection.tscn" id="4_1mxan"]
[ext_resource type="FontFile" uid="uid://bbvj3mftecedk" path="res://Assets/Fonts/unicode.futurab.ttf" id="4_a2owq"]
[ext_resource type="FontFile" uid="uid://4rqi5msf7djb" path="res://Assets/Fonts/BAHNSCHRIFT.TTF" id="5_n27kw"]

[sub_resource type="LabelSettings" id="LabelSettings_7rnj3"]
font = ExtResource("4_a2owq")
font_size = 50
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="PlayerMenu" type="CanvasLayer"]
script = ExtResource("1_y8pii")

[node name="PLAYER MENU" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -285.0
offset_top = 57.0
offset_right = 285.0
offset_bottom = 138.0
grow_horizontal = 2
text = "PLAYER MENU"
label_settings = ExtResource("2_hv66v")

[node name="DisplayPlayers" type="Node" parent="."]

[node name="Player0" type="Control" parent="DisplayPlayers"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -420.0
offset_right = 20.0
offset_bottom = -380.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="DisplayPlayers/Player0" instance=ExtResource("2_7obty")]
scale = Vector2(10, 10)
isPlayerMenu = true
canShoot_Move = false

[node name="-1" type="LineEdit" parent="DisplayPlayers/Player0"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -193.0
offset_right = 144.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
placeholder_text = "Keyboard"
alignment = 1
max_length = 10

[node name="Player1" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_top = -40.0
offset_bottom = 0.0

[node name="Player2" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = -220.0
offset_top = -40.0
offset_right = -180.0
offset_bottom = 0.0
playerIndex = 1

[node name="Player3" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = 180.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 0.0
playerIndex = 2

[node name="Player4" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = 580.0
offset_top = -40.0
offset_right = 620.0
offset_bottom = 0.0
playerIndex = 3

[node name="Player5" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_top = 299.0
offset_bottom = 339.0
playerIndex = 4

[node name="Player6" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = -220.0
offset_top = 299.0
offset_right = -180.0
offset_bottom = 339.0
playerIndex = 5

[node name="Player7" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = 180.0
offset_top = 299.0
offset_right = 220.0
offset_bottom = 339.0
playerIndex = 6

[node name="Player8" parent="DisplayPlayers" instance=ExtResource("4_1mxan")]
offset_left = 580.0
offset_top = 299.0
offset_right = 620.0
offset_bottom = 339.0
playerIndex = 7

[node name="StartGame" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -279.0
offset_right = 261.0
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_a2owq")
theme_override_font_sizes/font_size = 80
disabled = true
text = "START GAME"

[node name="FFA SetTime" type="LineEdit" parent="."]
offset_left = 71.0
offset_top = 50.0
offset_right = 386.0
offset_bottom = 113.0
theme_override_fonts/font = ExtResource("5_n27kw")
theme_override_font_sizes/font_size = 40
placeholder_text = "FFA TIME (120s)"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="Label" type="Label" parent="."]
visible = false
offset_top = 748.0
offset_right = 671.0
offset_bottom = 961.0
text = "Power Ups:
mouse
elephant
speed
??? shotgun
??? cannon
??? piercing
??? gatling gun
??? mines
??? teleport
??? laser"
label_settings = SubResource("LabelSettings_7rnj3")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.25
autostart = true

[node name="Unattended" type="Timer" parent="."]
process_callback = 0
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="text_submitted" from="DisplayPlayers/Player0/-1" to="." method="submitPlayer0"]
[connection signal="pressed" from="StartGame" to="." method="StartGame"]
[connection signal="text_submitted" from="FFA SetTime" to="." method="SetTimeFFA"]
[connection signal="timeout" from="Timer" to="." method="check_avail"]
[connection signal="timeout" from="Unattended" to="." method="Unattended"]
